// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h1>
    Playlist
  </h1>
  <div>
    <Connect(PlaylistItem)
      key="1"
      song={
        Object {
          "album": "tincidunt in",
          "artist": "Erika McTerry",
          "duration": 3.25,
          "title": "id nulla ultrices",
        }
      }
    />
  </div>
</div>
`;

exports[`renders correctly with empty playlist 1`] = `
<div>
  <h1>
    Playlist
  </h1>
  <div>
    <h2>
      No songs in playlist
    </h2>
  </div>
</div>
`;
